--- a/static/larch/larch_ui.css
+++ b/static/larch/larch_ui.css
@@ -71,14 +71,17 @@ ul.fragment_inspector_list > li > a:hover {
 }
 
 .inspector_model_python {
-    color: #008000;
+    color: #080;
+    font-family: monospace;
 }
 
 .inspector_model_pres {
-    color: #004080;
+    color: #06c;
+    font-family: monospace;
 }
 
 .inspector_id {
-    color: #800060;
+    color: #806;
+    font-family: monospace;
 }
 
