--- a/static/larch/larch_app.css
+++ b/static/larch/larch_app.css
@@ -36,7 +36,7 @@
 .larch_app_doc_list_header {
     font-weight: bold;
     color: #505050;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Roboto', sans-serif;
     background: #e0e0d0;
 }
 
