Fixes to Flask app. License fixes to CSS.

--- a/static/larch/console.css
+++ b/static/larch/console.css
@@ -1,8 +1,6 @@
-/*
--*************************
+/*************************
 -* This source code is (C)copyright Geoffrey French 2011-2013.
--*************************
-*/
+-*************************/
 
 .python_console_header {
     font-family: 'Roboto', sans-serif;
