--- a/static/larch/larch.css
+++ b/static/larch/larch.css
@@ -1,10 +1,8 @@
-/*
--*************************
+/*************************
 -* This source code is (C)copyright Geoffrey French 2011-2013.
--*************************
-*/
+-*************************/
 
-@import url(http://fonts.googleapis.com/css?family=Oswald|Roboto);
+@import url(//fonts.googleapis.com/css?family=Oswald|Roboto);
 
 body {
     color: #404040;
