--- a/static/larch/larch_app_frame.css
+++ b/static/larch/larch_app_frame.css
@@ -1,3 +1,7 @@
+/*************************
+-* This source code is (C)copyright Geoffrey French 2011-2013.
+-*************************/
+
 @import url(http://fonts.googleapis.com/css?family=Oswald:300);
 
 .__larch_app_frame_page_header {
