--- a/static/larch/larch_login.css
+++ b/static/larch/larch_login.css
@@ -1,4 +1,8 @@
-@import url(http://fonts.googleapis.com/css?family=Oswald:300);
+/*************************
+-* This source code is (C)copyright Geoffrey French 2011-2013.
+-*************************/
+
+@import url(//fonts.googleapis.com/css?family=Oswald);
 
 body {
     padding: 0;
