--- a/static/larch/larch_ui.css
+++ b/static/larch/larch_ui.css
@@ -1,3 +1,7 @@
+/*************************
+-* This source code is (C)copyright Geoffrey French 2011-2013.
+-*************************/
+
 .larch_ui_focusable {
     margin-bottom: 0.8em !important;
 }
