--- a/static/larch/notebook.css
+++ b/static/larch/notebook.css
@@ -1,8 +1,7 @@
-/*
--*************************
+/*************************
 -* This source code is (C)copyright Geoffrey French 2011-2013.
--*************************
-*/
+-*************************/
+
 .notebook_exec_state_init {
     font-weight: bold;
     color: #c03000;
