--- a/static/larch/python.css
+++ b/static/larch/python.css
@@ -1,8 +1,6 @@
-/*
--*************************
+/*************************
 -* This source code is (C)copyright Geoffrey French 2011-2013.
--*************************
-*/
+-*************************/
 
 /*
 Styles for text written to stdout and stderr
