--- a/static/larch/larch_app.css
+++ b/static/larch/larch_app.css
@@ -1,8 +1,6 @@
-/*
--*************************
+/*************************
 -* This source code is (C)copyright Geoffrey French 2011-2013.
--*************************
-*/
+-*************************/
 
 .larch_app_enclosure {
     width: 1280px;
